--- a/packages/wonders-icons/package.json
+++ b/packages/wonders-icons/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "async": "^3.1.0",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "gulp-iconfont": "^10.0.3",
-    "gulp-iconfont-css": "^3.0.0"
+    "gulp-iconfont-css": "^3.0.0",
+    "gulp-watch": "^5.0.1"
   }
 }
