--- a/packages/wonders-icons/package.json
+++ b/packages/wonders-icons/package.json
@@ -9,11 +9,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "async": "^3.1.0",
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/runtime": "^7.7.6",
+    "adm-zip": "^0.4.13",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-iconfont": "^10.0.3",
     "gulp-iconfont-css": "^3.0.0",
-    "gulp-watch": "^5.0.1"
+    "gulp-replace": "^1.0.0",
+    "gulp-template": "^5.0.0",
+    "gulp-watch": "^5.0.1",
+    "webpack-stream": "^5.2.1"
+  },
+  "dependencies": {
+    "node-rsa": "^1.0.7"
   }
 }
