--- a/packages/wonders-tohtml/package.json
+++ b/packages/wonders-tohtml/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
+    "@types/gulp": "^4.0.6",
     "@types/node": "^12.12.21",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-watch": "^5.0.1"
   },
   "dependencies": {
-    "adm-zip": "^0.4.13"
+    "adm-zip": "^0.4.13",
+    "gulp": "^4.0.2",
+    "gulp-template": "^5.0.0"
   }
 }
