--- a/packages/wonders-tohtml/package.json
+++ b/packages/wonders-tohtml/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "wonders-tohtml",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/adm-zip": "^0.4.32",
-    "@types/gulp": "^4.0.6",
-    "@types/node": "^12.12.21",
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
-    "gulp-watch": "^5.0.1"
-  },
-  "dependencies": {
-    "adm-zip": "^0.4.13",
-    "gulp": "^4.0.2",
-    "gulp-template": "^5.0.0"
-  }
+    "name": "wonders-tohtml",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/main.js",
+    "scripts": {
+        "build": "tsc",
+        "tsc-dev": "tsc -W"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/adm-zip": "^0.4.32",
+        "@types/gulp": "^4.0.6",
+        "@types/gulp-replace": "^0.0.31",
+        "@types/gulp-template": "^5.0.1",
+        "@types/node": "^12.12.21",
+        "gulp": "^4.0.2",
+        "gulp-clean": "^0.4.0",
+        "gulp-typescript": "^6.0.0-alpha.1",
+        "gulp-watch": "^5.0.1"
+    },
+    "bin": {
+        "tohtml": "dist/cli.js"
+    },
+    "dependencies": {
+        "adm-zip": "^0.4.13",
+        "commander": "^4.0.1",
+        "gulp": "^4.0.2",
+        "gulp-replace": "^1.0.0",
+        "gulp-template": "^5.0.0"
+    }
 }
