--- a/packages/wonders-tohtml/package.json
+++ b/packages/wonders-tohtml/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "dist/main.js",
     "scripts": {
-        "build": "tsc",
+        "build": "rimraf dist  && tsc",
         "tsc-dev": "tsc -W"
     },
     "keywords": [],
@@ -12,14 +12,9 @@
     "license": "ISC",
     "devDependencies": {
         "@types/adm-zip": "^0.4.32",
-        "@types/gulp": "^4.0.6",
-        "@types/gulp-replace": "^0.0.31",
-        "@types/gulp-template": "^5.0.1",
+        "@types/lodash": "^4.14.149",
         "@types/node": "^12.12.21",
-        "gulp": "^4.0.2",
-        "gulp-clean": "^0.4.0",
-        "gulp-typescript": "^6.0.0-alpha.1",
-        "gulp-watch": "^5.0.1"
+        "rimraf": "^3.0.0"
     },
     "bin": {
         "tohtml": "dist/cli.js"
@@ -27,8 +22,6 @@
     "dependencies": {
         "adm-zip": "^0.4.13",
         "commander": "^4.0.1",
-        "gulp": "^4.0.2",
-        "gulp-replace": "^1.0.0",
-        "gulp-template": "^5.0.0"
+        "lodash": "^4.17.15"
     }
 }
