--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "tohtml ./test.docx",
+        "build": "gulp"
     },
     "repository": {
         "type": "git",
@@ -25,6 +26,9 @@
         "@typescript-eslint/eslint-plugin": "^2.12.0",
         "@typescript-eslint/parser": "^2.12.0",
         "eslint": "^6.7.2",
+        "gulp": "^4.0.2",
+        "gulp-clean": "^0.4.0",
+        "gulp-typescript": "^6.0.0-alpha.1",
         "lerna": "^3.19.0",
         "typescript": "^3.7.3"
     }
