--- a/packages/iconfont/package.json
+++ b/packages/iconfont/package.json
@@ -13,6 +13,7 @@
         "loadsh": "^0.0.4",
         "svg2ttf": "^4.3.0",
         "svgicons2svgfont": "^9.1.1",
+        "svgstore": "^3.0.0-2",
         "ttf2eot": "^2.0.0",
         "ttf2woff": "^2.0.1",
         "ttf2woff2": "^3.0.0"
