--- a/packages/iconfont/package.json
+++ b/packages/iconfont/package.json
@@ -16,6 +16,7 @@
         "svgstore": "^3.0.0-2",
         "ttf2eot": "^2.0.0",
         "ttf2woff": "^2.0.1",
-        "ttf2woff2": "^3.0.0"
+        "ttf2woff2": "^3.0.0",
+        "xml-js": "^1.6.11"
     }
 }
