--- a/packages/tohtml/package.json
+++ b/packages/tohtml/package.json
@@ -4,7 +4,7 @@
     "description": "tohtml",
     "main": "lib/main.js",
     "scripts": {
-        "tsst": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": "https://github.com/MaxTan330/wonders/tree/master/packages/tohtml",
     "keywords": [
