--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "iconfont": "iconfont ./svg/add.svg",
+        "iconfont": "iconfont ./packages/iconfont/src/assets/svgs -n want-icon",
         "tohtml": "tohtml ./test.docx",
         "dev:tohtml": "gulp tohtmlDev",
         "dev:iconfont": "gulp iconfontDev",
