--- a/packages/base64/package.json
+++ b/packages/base64/package.json
@@ -1,17 +1,23 @@
 {
     "name": "@maxtan/base64",
     "version": "1.0.0",
-    "description": "",
+    "description": "base64 编码",
     "main": "lib/index.js",
+    "module": "lib/index.mjs",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "repository": "https://github.com/MaxTan330/wonders/tree/master/packages/base64",
     "author": "MaxTan <maxtan330@163.com>",
     "publishConfig": {
         "access": "public"
     },
     "files": [
         "lib"
+    ],
+    "keywords": [
+        "base64",
+        "urlsafe"
     ],
     "license": "ISC"
 }
