--- a/packages/nts-router/package.json
+++ b/packages/nts-router/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@maxtan/nts-router",
-    "version": "1.0.0",
-    "description": "nts-router 是基于 Typescript 装饰器和 express。用了简化express 路由和回调操作的",
+    "version": "1.0.1",
+    "description": "nts-router 是基于 Typescript 装饰器和 express。用来简化express 路由和回调操作的",
     "main": "lib/index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
