--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
         "dev:tohtml": "gulp tohtmlDev",
         "dev:iconfont": "gulp iconfontDev",
         "dev:base64": "gulp base64Dev",
-        "dev:ntsRouterDev": "gulp ntsRouterDev",
+        "dev:ntsRouter": "gulp ntsRouterDev",
         "build:tohtml": "gulp tohtmlBuild",
         "build:iconfont": "gulp iconfontBuild",
         "build:base64": "gulp base64Build",
-        "build:ntsRouterBuild": "gulp ntsRouterBuild"
+        "build:ntsRouter": "gulp ntsRouterBuild"
     },
     "repository": {
         "type": "git",
