--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
         "dev:tohtml": "gulp tohtmlDev",
         "dev:iconfont": "gulp iconfontDev",
         "dev:base64": "gulp base64Dev",
-        "dev:ntsRouterDev": "gulp ntsRouterDev",
+        "dev:ntsRouter": "gulp ntsRouterDev",
         "build:tohtml": "gulp tohtmlBuild",
         "build:iconfont": "gulp iconfontBuild",
         "build:base64": "gulp base64Build",
-        "build:ntsRouterBuild": "gulp ntsRouterBuild"
+        "build:ntsRouter": "gulp ntsRouterBuild"
     },
     "repository": {
         "type": "git",
@@ -38,7 +38,6 @@
         "gulp-clean": "^0.4.0",
         "gulp-typescript": "^6.0.0-alpha.1",
         "gulp-watch": "^5.0.1",
-        "lerna": "^3.19.0",
         "typescript": "^3.7.3"
     },
     "dependencies": {}
