修改农历日期推算方式

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:iconfont": "gulp iconfontBuild",
     "build:base64": "gulp base64Build",
     "build:ntsRouter": "gulp ntsRouterBuild",
-    "dev:calendarBuild": "gulp calendarBuild"
+    "build:calendarBuild": "gulp calendarBuild"
   },
   "repository": {
     "type": "git",
